add open ai connection

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,7 @@ POSTGRES_DB=
 POSTGRES_HOST=
 POSTGRES_PORT=
 FLASK_ENV=
+OPENAI_API_KEY=
+OPENAI_EXTRACTION_PROMPT_ID=
+OPENAI_PROMPT_VERSION=
+OPENAI_MODEL=
